--- a/less/about.less
+++ b/less/about.less
@@ -8,7 +8,7 @@
     background-color: rgb(27,29,35);
     padding: 25px;
     border-radius: 5px;
-    padding-top: 50px;
+    padding-top: 35px;
     .about-container{
         width: 100%;
         display: flex;
@@ -17,7 +17,7 @@
     }
     h2{
         color: aliceblue;
-        font-size: 2.6rem;
+        font-size: 2.4rem;
         font-weight: bolder;
         margin-bottom: 30px;
         width: max-content;
