--- a/less/cta.less
+++ b/less/cta.less
@@ -6,8 +6,8 @@
     height: 100%;
     width: 70%;
     align-items: center;
-    padding-bottom: 50px;
-    margin-top: 50px;
+    padding-bottom: 30px;
+    margin-top: 10px;
 }
 .cta {
     width: 100%;
@@ -27,20 +27,21 @@
         color: @altpurple;
         font-size: 2.6rem;
         width: 50%;
-        padding-top: 50px;
+        padding-top: 25px;
         font-weight: bold;
         line-height:1.25;
         text-align: center;
         color: aliceblue;
     }
     button{
-        margin-top: 50px;;
-        height: 50px;
+        margin-top: 30px;;
+        margin-bottom: 30px;
+        display: flex;
         margin-bottom: 10px;
         border-radius: 5px;
         background-color: @purple;
         color: aliceblue;
         font-size: 1.4rem;
-        padding: 10px;
+        padding: 20px;
     }
 }
