--- a/less/header.less
+++ b/less/header.less
@@ -22,7 +22,7 @@
     color: aliceblue;
     font-size: 1.4rem;
     &:hover{
-        color: blue;
+        color: @altlight;
     }
   }
 }
