--- a/less/projects.less
+++ b/less/projects.less
@@ -7,14 +7,14 @@
   width: 60%;
   background-color: rgb(27, 29, 35);
   padding: 25px;
-  padding-top: 50px;
+  padding-top: 35px;
   border-radius: 5px;
   img {
     width: 90%;
   }
   h2 {
     color: aliceblue;
-    font-size: 2.6rem;
+    font-size: 2.4rem;
     font-weight: bolder;
     margin-top: 20px;
     margin-bottom: 30px;
